# ragas_practice

./: .env.example  .gitignore  README.md  api.py  chain.py  evaluate.py  pyproject.toml
